# openapi.action.json
@@ -16,11 +16,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "additionalProperties": {
-                    "type": "string"
-                  },
-                  "type": "object",
-                  "title": "Response Gethealth"
+                  "$ref": "#/components/schemas/HealthResponse"
                 }
               }
             }
@@ -1120,6 +1116,19 @@
         },
         "type": "object",
         "title": "HTTPValidationError"
+      },
+      "HealthResponse": {
+        "properties": {
+          "status": {
+            "type": "string",
+            "title": "Status"
+          }
+        },
+        "type": "object",
+        "required": [
+          "status"
+        ],
+        "title": "HealthResponse"
       },
       "InvestmentThesisRead": {
         "properties": {
